--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block (click)="loginUser()" *ngIf="!userProfile">
+  <button ion-button block (click)="loginUser()" *ngIf="!userProfile" color="light">
     <ion-icon name="logo-google"></ion-icon>
     Iniciar sesion con Google
   </button>
