--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,10 +12,11 @@
 </ion-header>
 
 <ion-content>
+   <img src="assets/img/slider01.jpg" [width]="100"/>
   <ion-list>
     <ion-item-sliding *ngFor='let rute of rutes | async'>
       <ion-item>
-        <ion-label ion-select (click)="showrute( rute )">{{ rute.hora}}: Desde {{rute.inicio}} hasta {{rute.destino}}</ion-label>
+        <ion-label ion-select (click)="showrute( rute )">{{ rute.hora}}. Desde {{rute.inicio}} hasta {{rute.destino}}</ion-label>
       </ion-item>
     </ion-item-sliding>
   </ion-list>
