--- a/src/pages/form-rute/form-rute.html
+++ b/src/pages/form-rute/form-rute.html
@@ -31,7 +31,7 @@
 
         <ion-item>
           <ion-label floating>Tipo vehiculo</ion-label>
-          <ion-select formControlName="tipoVehiculo" interface="popover">
+          <ion-select formControlName="tipoVehiculo"  (ionChange)="onSelectChange($event)" interface="popover">
             <ion-option value="Carro">Carro</ion-option>
             <ion-option value="Moto">Moto</ion-option>
           </ion-select>
@@ -39,35 +39,12 @@
 
         <ion-item>
             <ion-label floating>capacidad</ion-label>
-            <ion-input formControlName="capacidad" type="number"></ion-input>
+            <ion-input formControlName="capacidad" type="number" [(ngModel)]="capacidadValue"></ion-input>
         </ion-item>
 
         <ion-item>
             <ion-label floating>Fecha</ion-label>
-            <ion-input formControlName="fecha" type="number"></ion-input>
-        </ion-item>
-<!--<ion-label floating>Fecha</ion-label>
-<ion-select formControlName="fecha" interface="popover">
-  <ion-option value="Enero">Enero</ion-option>
-  <ion-option value="Febrero">Febrero</ion-option>
-  <ion-option value="Marzo">Marzo</ion-option>
-  <ion-option value="Abril">Abril</ion-option>
-  <ion-option value="Mayo">Mayo</ion-option>
-  <ion-option value="Junio">Junio</ion-option>
-  <ion-option value="Julio">Julio</ion-option>
-  <ion-option value="Agosto">Agosto</ion-option>
-  <ion-option value="Septiembre">Septiembre</ion-option>
-  <ion-option value="Octubre">Octubre</ion-option>
-  <ion-option value="Noviembre">Noviembre</ion-option>
-  <ion-option value="Diciembre">Diciembre</ion-option>
-</ion-select>
-<ion-select formControlName="fecha" interface="popover">
-  <ion-option value="Carro">Carro</ion-option>
-  <ion-option value="Moto">Moto</ion-option>
-</ion-select>-->
-        <ion-item>
-            <ion-label floating>Hora</ion-label>
-            <ion-input formControlName="hora" type="text"></ion-input>
+            <ion-datetime formControlName="fecha" pickerFormat= "DD MMM YY, h:mm a" displayFormat="DD de MMMM de YYYY, h:mm A" doneText="Listo" cancelText="Cancelar" yearValues= "2018" minuteValues="0,15,30,45" monthShortNames="Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Sep, Oct, Nov, Dic" monthNames="Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre"></ion-datetime>
         </ion-item>
 
         <ion-item>
