--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,20 +4,47 @@
       Comparte tu vehiculo
     </ion-title>
     <ion-buttons start>
-      <button ion-button (click)="createrute()">
-        <ion-icon name="add"></ion-icon>
-      </button>
+      <ion-buttons right>
+        <button ion-button (click)="createrute()">
+          <ion-icon name="add"></ion-icon> Nueva ruta
+        </button>
+    </ion-buttons>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-   <img src="assets/img/slider01.jpg" [width]="100"/>
+   <img class="banner" src="assets/img/slider01.jpg" [width]="100"/>
   <ion-list>
-    <ion-item-sliding *ngFor='let rute of rutes | async'>
-      <ion-item>
-        <ion-label ion-select (click)="showrute( rute )">{{ rute.hora}}. Desde {{rute.inicio}} hasta {{rute.destino}}</ion-label>
-      </ion-item>
-    </ion-item-sliding>
+    <ion-card *ngFor='let rute of rutes | async' ion-select (click)="showrute( rute )">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div class="profile">
+              <h2><b> {{rute.nombre}} </b></h2>
+              <img class="profile" src="https://lh6.googleusercontent.com/-OZgSH76uyBg/AAAAAAAAAAI/AAAAAAAAB9Q/9Y4sZqiUBoc/photo.jpg" />
+            </div>
+          </ion-col>
+          <ion-col class = "col_2">
+            <div> <h2> {{rute.fecha}} - <b>{{rute.hora}}</b> </h2></div>
+            <div>
+              <ion-icon name="comparte_vehiculo-location_init"></ion-icon>{{rute.inicio}}
+              <br>
+              <br>
+              <ion-icon name="comparte_vehiculo-location_finish"></ion-icon>{{rute.destino}}
+            </div>
+          </ion-col>
+          <ion-col>
+            <div class = "vehiculo">
+              <b>{{rute.capacidad}}</b> asientos disponibles
+            </div>
+            <div>
+              <img *ngIf="rute.tipoVehiculo == 'Moto'" class= "vehiculo" src="assets/img/moto.png"/>
+              <img *ngIf="rute.tipoVehiculo == 'Carro'" class= "vehiculo" src="assets/img/carro.png"/>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
   </ion-list>
 </ion-content>
