ionic and angular update

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,8 +42,8 @@
                     <b>{{rute.capacidad}}</b> asientos disponibles
                   </div>
                   <div>
-                    <img *ngIf="rute.tipoVehiculo == 'Moto'" class= "vehiculo" src="assets/img/moto.png"/>
-                    <img *ngIf="rute.tipoVehiculo == 'Carro'" class= "vehiculo" src="assets/img/carro.png"/>
+                    <img *ngIf="rute.tipoVehiculo == 'Moto'" class= "vehiculo" src="assets/img/img_moto.jpg"/>
+                    <img *ngIf="rute.tipoVehiculo == 'Carro'" class= "vehiculo" src="assets/img/img_car.jpg"/>
                   </div>
                 </ion-col>
               </ion-row>
