--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,14 @@
     </ion-title>
     <ion-buttons start>
       <ion-buttons right>
+        <!--<button ion-button (click)="showProfile()">
+          <ion-icon name="person"></ion-icon> Perfil
+        </button>!-->
         <button ion-button (click)="createrute()">
           <ion-icon name="add"></ion-icon> Nueva ruta
+        </button>
+        <button ion-button (click)="logOut()">
+          <ion-icon name="log-out"></ion-icon> Cerrar sesion
         </button>
     </ion-buttons>
     </ion-buttons>
