--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
-  </script>-->
-
+  </script>
+-->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
