--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar hideBackButton color="primary">
     <ion-title>
       Comparte tu vehiculo: inicio sesion
     </ion-title>
