--- a/src/pages/modal-info/modal-info.html
+++ b/src/pages/modal-info/modal-info.html
@@ -35,8 +35,13 @@
         <p>{{ rute.destino}}</p>
       </ion-item>
 
+        <ion-item *ngIf="rute.descripcion.length > 0">
+            <h2>Descripción</h2>
+            <p>{{ rute.descripcion}}</p>
+        </ion-item>
+
       <ion-item>
-        <h2>Tipo de vehiculo</h2>
+        <h2>Tipo de vehículo</h2>
         <p>{{ rute.tipoVehiculo}}</p>
       </ion-item>
 
@@ -47,31 +52,15 @@
 
       <ion-item>
         <h2>Fecha</h2>
-        <p>{{ rute.fecha}}</p>
+        <p>{{rute.timestamp | date: 'dd/MM/yyyy'}}</p>
       </ion-item>
 
       <ion-item>
         <h2>Hora</h2>
-        <p>{{ rute.hora}}</p>
-      </ion-item>
-
-      <ion-item *ngIf="rute.descripcion.length > 0">
-        <h2>Descripcion</h2>
-        <p>{{ rute.descripcion}}</p>
+        <p>{{rute.timestamp | date: 'h:mm a'}}</p>
       </ion-item>
 
     </ion-list>
-      <ion-footer>
-        <ion-toolbar>
-          <ion-buttons end>
-            <button ion-button (click)="closeModal()">Cancelar</button>
-            <button ion-button *ngIf="owner && rute.numeroPasajeros === 0" color="danger" (click)="deleteRute()">Eliminar ruta</button>
-            <button ion-button *ngIf="owner && rute.numeroPasajeros > 0" color="blue" (click)="showPassengers()">Pasajeros inscritos</button>
-            <button ion-button *ngIf="!owner && !subscribed && rute.capacidad != 0" color="blue" (click)="addNewPassengerInfo()">Tomar esta ruta</button>
-            <button ion-button *ngIf="!owner && subscribed" color="green" (click)="initChat(null)">Contacto</button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-footer>
     </div>
 
   <div *ngIf="!primary && owner">
@@ -89,24 +78,17 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-footer>
-      <ion-toolbar>
-        <ion-buttons end>
-          <button ion-button (click)="closeModal()" color="blue">Aceptar</button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-footer>
   </div>
 
-  <div *ngIf="!primary && !owner">
+  <div class="confirmacion" *ngIf="!primary && !owner">
     <div text-center>
       <img src="assets/img/mundo.jpeg" [width]="100"/>
     </div>
-    <h2> Gracias por contribuir con el medio ambiente, recuerda estar en el punto de encuentro </h2>
+    <h4> {{mName}}, Gracias por contribuir con el medio ambiente, recuerda estar en el punto de encuentro </h4>
     <br>
     <ion-list>
         <ion-item>
-          <h2>Contacto vehiculo compartido: {{ rute.nombre}}</h2>
+          <h2>Contacto vehículo compartido: {{ rute.nombre}}</h2>
           <p>{{ rute.email}}</p>
         </ion-item>
         <ion-item>
@@ -118,13 +100,28 @@
           <p>{{ rute.inicio}}</p>
         </ion-item>
     </ion-list>
-    <ion-footer>
-      <ion-toolbar>
-        <ion-buttons end>
-        <button ion-button (click)="closeModal()" color="danger">Cancelar</button>
-          <button ion-button (click)="addNewPassenger()" color="blue">Confirmar cupo</button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-footer>
   </div>
 </ion-content>
+
+<ion-footer>
+    <ion-toolbar *ngIf="!primary && !owner">
+        <ion-buttons end>
+            <button ion-button (click)="closeModal()" color="danger">Cancelar</button>
+            <button ion-button (click)="addNewPassenger()" color="blue">Confirmar cupo</button>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar *ngIf="!primary && owner">
+        <ion-buttons end>
+            <button ion-button (click)="closeModal()" color="blue">Aceptar</button>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar *ngIf="primary">
+        <ion-buttons end>
+            <button ion-button (click)="closeModal()">Cancelar</button>
+            <button ion-button *ngIf="owner && rute.numeroPasajeros === 0" color="danger" (click)="deleteRute()">Eliminar ruta</button>
+            <button ion-button *ngIf="owner && rute.numeroPasajeros > 0" color="blue" (click)="showPassengers()">Pasajeros inscritos</button>
+            <button ion-button *ngIf="!owner && !subscribed && rute.capacidad != 0" color="blue" (click)="addNewPassengerInfo()">Tomar esta ruta</button>
+            <button ion-button *ngIf="!owner && subscribed" color="green" (click)="initChat(null)">Contacto</button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-footer>
